After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752117 - avidemux: fix event leak
avidemux: fix event leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-08 11:31 UTC by Vineeth
Modified: 2015-08-16 13:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix event leak (990 bytes, patch)
2015-07-08 11:32 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-07-08 11:31:20 UTC
when seek fails in avidemux, 
event is not being freed.
Comment 1 Vineeth 2015-07-08 11:32:50 UTC
Created attachment 307068 [details] [review]
fix event leak
Comment 2 Luis de Bethencourt 2015-07-08 11:56:02 UTC
Looks good to me.
Comment 3 Luis de Bethencourt 2015-07-08 11:58:28 UTC
Review of attachment 307068 [details] [review]:

Vineeth, description lines in the commit message can be up to 76 characters.

commit 5439fc9a0cd2ccd1952152a56f11c48cf93a7f1a
Author: Vineeth T M <vineeth.tm@samsung.com>
Date:   Wed Jul 8 20:31:42 2015 +0900

    avidemux: fix event leak

    when seek fails in avidemux, event is not being freed.

    https://bugzilla.gnome.org/show_bug.cgi?id=752117